[package]
name = "lit-os-core"
description = "Lit OS Core"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition = "2021"
exclude = ["resources/test/"]

[dependencies]
log = { version = "0.4.20", features = ["kv_unstable"] }
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
serde_yaml = { version = "0.9.25" }
serde_bytes_base64 = { version = "0.1.1" }
sev-snp-utilities = { version = "1.4.9" }
config = { version = "0.13.3" }
nix = { version = "0.26.2" }
regex = { version = "1.10.2" }
once_cell = { version = "1.18.0" }
ipnet = { version = "2.9.0" }
sha2 = { version = "0.10.8" }

[dev-dependencies]
temp-file = { version = "0.1.7" }

[dependencies.lit-core]
path = "../../lit-core/lit-core"

[dependencies.lit-blockchain]
path = "../../lit-core/lit-blockchain"

[package.metadata.cargo-udeps.ignore]
development = ["temp-file"]
