[package]
name = "lit-verification-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lit-verification-api"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
email-address-parser = "1.0.3"
phonenumber = "0.3.3"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
num_cpus = { version = "1.15.0" }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde"] }
rand = "~0.7.3"
data-encoding = "2.3.2"
elliptic-curve = {version="0.13.0", features=["jwk", "serde"]}
k256 = {version="0.13.0", features = ["sha256", "ecdsa", "serde", "alloc"], optional = false }
digest = "0.10.6"
chrono = "0.4.23"
sha3 = "0.10.7"
hex = "0.4.3"

rocket = { git = "https://github.com/LIT-Protocol/Rocket", branch = "feature/port-reuse", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "985098dd8f3b052716111eaa872d184cc21a1a68"  }
rocket-governor = { version = "0.1.0-rc.4", features = ["limit_info"] }
derive_more = { version = "0.99.17" }
uuid = "1.3.1"
ethers = { version = "2.0.8", features = [
    "abigen",
    "legacy" 
]}


moka = { version = "0.11", features = ["future"] }

[dependencies.lit-logging]
path = "../../lit-core/lit-logging"
features = ["service"]

[dependencies.lit-core]
path = "../../lit-core/lit-core"

[dependencies.lit-api-core]
path = "../../lit-core/lit-api-core"
features = ["rocket-helper"]

[dependencies.lit-os-core]
path="../../lit-os/lit-os-core"

[dependencies.lit-core-derive]
path = "../../lit-core/lit-core-derive"

[dependencies.lit-attestation]
path = "../../lit-core/lit-attestation"
features = ["generate-via-service", "kdf"]